--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/customer
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:hsqldb:file:/tmp/spring-dynamodb-tutorial
+spring.datasource.username=sa
+spring.datasource.password=
 
-
-amazon.aws.accesskey=
-amazon.aws.secretkey=
+amazon.dynamodb.endpoint=http://localhost:8000/
+amazon.aws.accesskey=test
+amazon.aws.secretkey=test
